# flask_inertia_test

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py  application.py  csrf.py  ext.py  settings.py
app/blueprints/: main.py
app/context_processors/: __init__.py  assets.py
static/vue/: package-lock.json  package.json  vue.config.js
static/vue/src/: main.js
static/vue/src/css/: app.css
static/vue/src/pages/: Contact.vue  Index.vue  Layout.vue  StaticPage.vue
templates/: base.html
